# mujoco_decision_transformer

./: README.md  mujoco_halfcheetah_medium-v0_dt.pt  mujoco_walker2d_medium-v0_dt.pt  pyproject.toml
scripts/: evaluate.py  train.py
src/pong_decision_transformer/: __init__.py  dataset.py  model.py  train.py
